<resources>
    <string name="app_name">PAXSTORE SDK Demo</string>
    <string name="app_title">PAXSTORE SDK Demo</string>
    <string name="label_banner_title">SDK Integration Usage</string>
    <string name="label_banner_text">Demonstrate how to integrate SDK functions into your application</string>
    <string name="label_param_detail">Parameter Detail</string>
    <string name="label_no_data">No Data</string>
    <string name="label_function">Function</string>
    <string name="label_trading_status">App ready to be updated</string>
    <string name="label_open_paxstore_client">View app detail from STORE client</string>
    <string name="label_version_text">Current version: </string>
    <string name="label_copyright_text">Copyright @ 2018 PAX All Rights Reserved</string>
    <string name="label_ready_to_update">App could be updated by STORE app now.</string>
    <string name="label_not_ready_to_update">App is busy, can not be updated by STORE app now.</string>
    <string name="label_retrieveTerminalInfo">Retrieve Terminal Info</string>
    <string name="label_retrieveMerchantInfo">Retrieve Merchant Info</string>
    <string name="label_button_retrieve">Retrieve</string>
    <string name="label_check_update">Check update</string>
    <string name="open_download_page_from_paxstore_client">Open download page from STORE client</string>
    <string name="label_goinsight">GoInsight Data Upload</string>

    <string name="get_last_success_param">Get last success parameter</string>
    <string name="get_terminal_location">Retrieve Terminal Location</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activate_terminal">Activate terminal</string>
    <string name="label_cloud_message">CloudMessage Tag Setting</string>t
    <string name="attach_msg_tags">Attach Message Tags</string>
    <string name="delete_msg_tags">Delete Message Tags</string>
    <string name="msg_tag_list">Message Tag List</string>
    <string name="get_all_tag">GET ALL TAG</string>
    <string name="msg_tip">Separated multiple tags by the English Delimiter ‘,’</string>
    <string name="send">Send</string>
    <string name="label_loading">Loading</string>
</resources>
