<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_weight="0"
            android:background="#0b2148"
            android:gravity="center_horizontal"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:text="@string/app_title"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="normal" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="179dp"
            android:background="@mipmap/banner_bg"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/banner_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:fontFamily="sans-serif-thin"
                android:gravity="center"
                android:text="@string/label_banner_title"
                android:textColor="#eeff41"
                android:textSize="24sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/banner_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="16dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/label_banner_text"
                android:textColor="#8affffff"
                android:textSize="12sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/banner_sub_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="16dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:lineSpacingMultiplier="1.2"
                android:textColor="#8affffff"
                android:textSize="12sp"
                android:textStyle="normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/FucntionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/label_function"
                android:textColor="#a9aabd"
                android:textSize="12sp"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="#ffffff"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"
                    android:text="@string/label_trading_status" />

                <Switch
                    android:id="@+id/tradingStateSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginRight="10dp"
                    android:gravity="right"
                    android:switchMinWidth="60dp"
                    android:textOff="No"
                    android:textOn="Yes"
                    android:theme="@style/MySwitchStyle" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#DDDDDD" />


            <LinearLayout
                android:id="@+id/openAppDetail"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="#ffffff"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="16dp"
                    android:text="@string/label_open_paxstore_client" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/right_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|center_vertical"
                        android:background="#ffffff"
                        android:padding="16dp"
                        android:src="@mipmap/list_btn_arrow" />
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#DDDDDD" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="#ffffff"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"
                    android:text="@string/label_retrieveTerminalInfo" />

                <Button
                    android:id="@+id/GetTerminalInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:layout_margin="10dp"
                    android:background="#63af57"
                    android:gravity="center|center_vertical"
                    android:text="@string/label_button_retrieve"
                    android:textColor="#ffffff"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#DDDDDD" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/versionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif"
                android:text="@string/label_version_text"
                android:textColor="#a9aabd"
                android:textSize="12sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/copyrightText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:fontFamily="sans-serif"
                android:text="@string/label_copyright_text"
                android:textColor="#a9aabd"
                android:textSize="12sp"
                android:textStyle="normal" />

        </LinearLayout>


    </LinearLayout>
</ScrollView>
