<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_weight="0"
            android:background="#0b2148"
            android:gravity="center_horizontal"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:text="@string/app_title"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="normal" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="179dp"
            android:background="@mipmap/banner_bg"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/banner_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:fontFamily="sans-serif-thin"
                android:gravity="center"
                android:text="@string/label_banner_title"
                android:textColor="#eeff41"
                android:textSize="24sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/banner_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="16dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/label_banner_text"
                android:textColor="#8affffff"
                android:textSize="12sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/banner_sub_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="16dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:lineSpacingMultiplier="1.2"
                android:textColor="#8affffff"
                android:textSize="12sp"
                android:textStyle="normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/parameterDetailTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/label_param_detail"
                android:textColor="#a9aabd"
                android:textSize="12sp"
                android:textStyle="normal" />

            <com.pax.android.demoapp.ListViewForScrollView
                android:id="@+id/parameter_detail_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"></com.pax.android.demoapp.ListViewForScrollView>

            <LinearLayout
                android:id="@+id/nodata"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="#ffffff"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:gravity="center"
                    android:text="@string/label_no_data" />

            </LinearLayout>


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#DDDDDD" />




            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#DDDDDD" />


        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/versionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif"
                android:text="@string/label_version_text"
                android:textColor="#a9aabd"
                android:textSize="12sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/copyrightText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:fontFamily="sans-serif"
                android:text="@string/label_copyright_text"
                android:textColor="#a9aabd"
                android:textSize="12sp"
                android:textStyle="normal" />

        </LinearLayout>


    </LinearLayout>
</ScrollView>
